--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@ strong {
   	width:100%;
   	height:100%;
   	overflow:hidden; 
-		background: url(/images/bg/bg05-min.jpg) no-repeat center bottom;
+		background: url(/images/bg/bgx1.jpg) no-repeat center bottom;
 }
 
 /* Overlay */
