--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@ strong {
   	width:100%;
   	height:100%;
   	overflow:hidden; 
-		background: url(/images/bg/bgx1.jpg) no-repeat center bottom;
+		background: url(/images/bg/bgx2.jpeg) no-repeat center top;
 }
 
 /* Overlay */
@@ -1283,17 +1283,90 @@ footer {
 
 @media screen and (max-width: 500px){
 	.logo {  
-		background-color: rgba(0, 0, 0, .5);
+		background-color: rgba(0, 0, 85, .5); 
 	}
-	.logo .row{ 
-		margin-top: 7px;
+	.logo .row{
+		height: 5.56vh; 
+		margin-top: 5px;
 	}
-	.logo img{
-		width: 50%;
+	.logo .bx{
+		width: 50px;
+		height: 75%; 
 	}
+	.logo .bx img{
+		width: 100%;
+		height: 100%;
+	}
+	
 
 	.welcome h2 { 
 		margin-bottom: 15px;
 	}
+
+
+	/* Hero Section */
+	.hero-con .container-fluid .welcome{
+		border: 1px solid dodgerblue;
+	}
+	.hero-con .container-fluid .welcome h2{
+		font-size: 1.23rem; 
+	}
+	.hero-con .container-fluid .welcome p{
+		font-size: 0.95rem;
+	}
+
+	/* Footer */
+	footer .container-fluid .row{ 
+		display: flex;
+		flex-direction: row;
+	} 
+	footer .container-fluid .row > div:first-of-type{ 
+		flex-basis: 80%;
+	}
+	footer .container-fluid .row > div:last-of-type{ 
+		flex-basis: 20%;
+	}
+
+	/* Copyright */
+.copyright { 
+	font-size:11px;
+	line-height:20px;
+  letter-spacing:.5px; 
+}
+
+.copyright > strong {
+  font-weight:400;
+}
+
+/* Social */
+.social {
+	list-style:none;
+	margin:0;
+	padding:0;
+  text-align:right;
+}
+
+.social li {
+	display:inline-block;
+	margin:0 1px 0 0;
+} 
+
+.social li a {
+	display:block;
+	overflow:hidden;
+	padding:0;
+	color:#fff;
+	transition:all .3s;
+}
+
+.social li i {
+	position:relative;
+	display:block;
+	font-size:12.5px;
+	line-height:20px;	 
+}
+
+
+
 
 }
